tests/Framework/Bus/Data/ValidCase/Context/Application/ValidCommand.php
<?php declare(strict_types=1);

namespace Tests\Framework\Bus\Data\ValidCase\Context\Application;

use Mage\Framework\Bus\Contracts\Command\Command;

final class ValidCommand implements Command {}
