tests/Framework/Bus/Data/InvalidTypeCase/Context/Application/InvalidCommand.php
<?php declare(strict_types=1);

namespace Tests\Framework\Bus\Data\InvalidTypeCase\Context\Application;

use Mage\Framework\Bus\Contracts\Command\Command;

final class InvalidCommand implements Command {}
